2010-03-10  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12919: Mistyping of a sql query 'expires' instead of 'expire'

2010-01-13  Dmitry Dulepov  <dmitry.dulepov+extrealurl@gmail.com>

	* Updated documentation: described that appendMissingSlash works before any other option

2009-11-17  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12158: KEY bk_realurl02 of table tx_realurl_uniqalias is too long
	* Released version 1.7.0

2009-11-16  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12529: tx_realurl->isMultidomain called multiple times
	* Fixed bug #12445: Redirects are prepended by a slash
	* Fixed bug #12414: Add to manual that checking the is_sitroot flag is mandatory in multidomain environments
	* Fixed bug #12274: appendMissingSlash with keyword "redirect" does not correctly redirect an URL with a query part

2009-10-08  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #11393: 2 folder with "exclude from speaking URL" - 404Error
	* Fixed bug #9545: "exclude from speaking url segment" doesn't work if there are two or more pages with the flag in the same directory
	* Fixed bug #12137: Field field_alias in table tx_realurl_uniqalias too small when using CONCAT_WS('-',verylongfieldname,other...) in alias_field
	* Fixed bug #11042: Wrong behaviuor of exclude from speaking url parameter
	* Fixed bug #9877: Problems with PD-Admin

2009-10-06  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #10329: Speaking URL path segment disappered from page overlay

2009-10-02  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Changed index bk_realurl02 (shorter key)
	* Commented TCEmain hook: it needs a better way of handling page renames
	* Fixed bug #9976: realurl stops working when encodeSpURL_postProc hook is used
	* Fixed bug #11873: Error in dokumentation decodeSpURL_postProc does not exist
	* Fixed bug #11347: Strip Tags in Titles